# perfect-cpp

./: README.md
cpp_work/code/: CMakeLists.txt
cpp_work/code/mcc/include/: MccEntry.h
cpp_work/code/mcc/src/: MccEntry.c
cpp_work/code/src/module_entry/: ModuleEntry.cpp
cpp_work/ft/: build.sh
cpp_work/ft/ftest/: CMakeLists.txt
cpp_work/ft/ftest/cpp_work/: CMakeLists.txt  CMakeLists.txt~
cpp_work/ft/ftest/include/ft/feature/service/: FtService.h
cpp_work/ft/ftest/include/fw/: ftest.h
cpp_work/ft/ftest/include/stubs/: ConsoleState.h
cpp_work/ft/ftest/infra/: CMakeLists.txt~
cpp_work/ft/ftest/src/: main.cpp
cpp_work/ft/ftest/src/ft/feature/CelluarMachine/: FtCelluarMachine.cpp
cpp_work/ft/ftest/src/ft/feature/Lru_Mru_Lfu/: FtLruMruLfu.cpp
cpp_work/ft/ftest/src/ft/feature/service/: FtService.cpp
cpp_work/ft/ftest/src/stubs/: ConsoleState.cpp
cpp_work/ft/project/: .cproject  .project
cpp_work/ft/project/Debug/: makefile  sources.mk
cpp_work/ft/utest/include/: utest.h
infra/include/: json.hpp
infra/include/l0-infra/allocator/: ObjectAllocator.h  StaticObjectAllocator.h
infra/include/l0-infra/auto-msg/: AutoMsg.h  AutoMsgFactory.h  DcmAutoMsg.h  Message.h  MsgAllocator.h
infra/include/l0-infra/base/: AbstractMap.h  ActorActionDef.h  AllocatorVisitor.h  AnyType.h  Assertions.h  BaseTypes.h  CompositeTransData.h  ConcreteMap.h  Config.h  Default.h  Dummy.h  EqHelper.h  FixSizeArray.h  FixSizeBuff.h  Foreach.h  HashMap.h  (+40 more)
infra/src/: toolstubs.cpp
tools/include/gtest/: gtest.h
tools/include/mockcpp/: ChainingMockHelper.h  mockcpp.h
(+561 files in other folders)
